--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -188,3 +188,9 @@ chmod 0666 /sys/class/drm/sde-crtc-0/measured_fps
 
 on post-fs && property:ro.boot.hwname=curtana
     mount none /vendor/lib64/liboemcrypto-curtana.so /vendor/lib64/liboemcrypto.so bind
+    
+# Hide Magisk
+on property:sys.boot_completed=1
+     # Restrict permissions to socket file
+     # to hide Magisk & co.
+     chmod 440 /proc/net/unix
