--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -446,6 +446,7 @@ service vendor.ssr_setup /system/vendor/bin/ssr_setup
 service vendor.ss_ramdump /system/bin/subsystem_ramdump_system 2
     class late_start
     group system everybody
+    ioprio rt 4
     disabled
 
 on property:ro.vendor.iocgrp.config=1
